--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,23 @@
 <div style="text-align:center">
 
 
-<input appCurrency type="text" value="25.679" />
+<div>
+    <span>25.679</span>
+    <input appCurrency type="text" value="25.679" class="number" />
+</div>
+
+<div>
+    <span>ABC</span>
+    <input appCurrency type="text" value="ABC" class="number" />
+</div>
+
+<div>
+    <span>22..678</span>
+    <input appCurrency type="text" value="22..678" class="number" />
+</div>
+<div>
+    <span></span>
+    <input appCurrency type="text" value="" class="number" />
+</div>
 
 
