updated with dynamic update bug example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,4 +21,9 @@
     <input appCurrency type="text" value="" class="number" />
 </div>
 
+<div>
+    <span><button (click)=(dynamicUpdate())>dynamically update</button></span>
+    <input appCurrency type="text" value="" class="number test" [formControl]="myInput" />
+</div>
+
 
